i3: run xrandr to only output to external display

--- a/i3/config
+++ b/i3/config
@@ -34,6 +34,9 @@ exec --no-startup-id flameshot
 # Multi Monitor (from ARandR)
 # exec --no-startup-id xrandr --output eDP1 --mode 1920x1080 --pos 0x0 --rotate normal --output HDMI1 --primary --mode 1920x1080 --pos 1920x0 --rotate normal --output VIRTUAL1 --off
 
+# only use external monitor
+exec --no-startup-id xrandr --output eDP1 --off --output HDMI1 --auto
+
 # autostart
 exec --no-startup-id nitrogen --restore
 # exec --no-startup-id nitrogen --set-zoom-fill ~/.config/wallpaper*
