polybar: fix nerd fonts glyhs

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -97,7 +97,7 @@ type = internal/cpu
 ; Seconds to sleep between updates
 ; Default: 1
 interval = 0.5
-label = "%{T2}%{T-} %percentage%%"
+label = "%{T2}%{T-} %percentage%%"
 label-foreground = ${colors.sapphire}
 label-padding-right = 1
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -107,13 +107,13 @@ type = internal/memory
 ; Default: 1
 interval = 0.5
 format = <label>
-label =  %gb_used%
+label =  %gb_used%
 label-foreground = ${colors.pink}
 ;-------------------------------------------
 [module/wired-network]
 type = internal/network
 interface = enp2s0
-format-connected = "%{T2}%{T-} <label-connected>"
+format-connected = "%{T2}󰈀%{T-} <label-connected>"
 label-connected =  %upspeed%   %downspeed%
 ;-------------------------------------------
 [module/wireless-network]
@@ -140,11 +140,11 @@ ramp-signal-5 = 
 type = internal/pulseaudio
 format-volume = "%{T2}<ramp-volume>%{T-} <label-volume>"
 label-volume = %percentage%%
-label-muted = "%{T2}婢%{T-} Mute"
+label-muted = "%{T2}󰝟%{T-} Mute"
 format-muted-foreground = ${colors.green}
 format-volume-foreground = ${colors.green}
 ramp-volume-0 =""
-ramp-volume-1 ="墳"
+ramp-volume-1 ="󰕾"
 ramp-volume-2 =""
 ;------------------------------------------------
 [module/date]
@@ -152,7 +152,7 @@ type = internal/date
 interval = 1
 date = %I:%M %p
 date-alt = %Y-%m-%d %H:%M:%S
-label =%{T2}%{T-} %date%
+label =%{T2}%{T-} %date%
 label-foreground = ${colors.foreground}
 ;------------------------------------------------
 [module/wakatime]
